Test containers run Application starts